# django-channels

./: Makefile  pyproject.toml
core/backend/: asgi.py  urls.py
core/backend/settings/components/: common.py
core/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
core/chat/migrations/: 0001_initial.py  0002_group_admin_group_members_alter_group_name_message_and_more.py
core/config/: .env
